src/python/fastapi/api/v1/api_v1_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1
  namespace: api
spec:
  selector:
    matchLabels:
      app: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: v1
        image: arieltar/api-v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
