src/python/fastapi/api/v1/api_v1_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v1-svc
  namespace: api
spec:
  selector:
    app: v1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
