src/python/fastapi/api/v1/api_v1_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-v1-ing
  namespace: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: api-v1-svc
            port:
              number: 8000
